# burncloud-service-models

./: .gitignore  Cargo.toml  README.md
docs/: PROMPT.md
examples/: usage.rs
src/: config.rs  error.rs  lib.rs  metrics.rs  model.rs  preprocessing.rs  repository.rs  runtime.rs  service.rs  validation.rs
tests/: database_insert_test.rs  integration_tests.rs  preprocessing_tests.rs  service_tests.rs  validation_tests.rs
