[package]
name = "burncloud-service-models"
version = "0.1.0"
edition = "2021"
description = "Service layer models for BurnCloud model management"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"