[package]
name = "burncloud-service-models"
version = "0.1.0"
edition = "2021"

[dependencies]
burncloud-database-models = { path = "../burncloud-database-models" }
burncloud-database = { path = "../burncloud-database" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
